# transition_judge_interface

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
docs/: rule.md  todo.md
include/transition_judge_interface/: transition_judge_interface_component.hpp  transition_judge_interface_node.hpp
launch/: transition_judge_interface_launch.py
src/: transition_judge_interface.cpp  transition_judge_interface_component.cpp  transition_judge_interface_node.cpp
