<?xml version="1.0"?>
<package format="3">
  <name>transition_judge_interface</name>
  <version>0.0.0</version>
  <description>Judge node that publishes TransitionRequest based on current state and external sensor inputs.</description>

  <maintainer email="shiryu.nakano@gmail.com">nkn4ryu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>transition_recipe_test</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>



  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
